# usar_multirobot

./: .gitignore  ExemplosManobrasDrone.txt  README.md  SCT.ipynb  UAV_tasks_calls  UGV_tasks_calls  mission.xml  python_requirements.txt  video_make.txt
src/full_system/: CMakeLists.txt  package.xml
src/full_system/launch/: gazebo_machine.launch  mapping.launch  monitor.launch  rviz_machine.launch  system.launch
src/full_system/msg/: trace_events.msg
src/full_system/rviz/: multi_slam.rviz  rtabmap.rviz  simple.rviz
src/full_system/src/: graph_rb.py  graph_viewer.py  teste.py  validation.py
src/full_system/src/samples/: Aug-03-2021  20:43:18.csv  Aug-03-2021  20:43:18_TM.csv  Aug-03-2021  20:50:32.csv  Aug-03-2021  20:50:32_TM.csv  Aug-03-2021  20:54:08.csv  Aug-03-2021  20:54:08_TM.csv  Aug-03-2021  21:03:33.csv  Aug-03-2021  21:03:33_TM.csv  Aug-03-2021  21:15:03.csv  Aug-03-2021  21:15:03_TM.csv  Aug-03-2021  21:22:49.csv  Aug-03-2021  21:22:49_TM.csv  Aug-03-2021  21:30:32.csv  Aug-03-2021  21:30:32_TM.csv  Aug-03-2021  21:59:02.csv  Aug-03-2021  21:59:02_TM.csv  Aug-03-2021  22:05:50.csv  Aug-03-2021  22:05:50_TM.csv  Aug-03-2021  22:10:58.csv  Aug-03-2021  22:10:58_TM.csv  Aug-03-2021  22:15:15.csv  Aug-03-2021  22:15:15_TM.csv  Aug-05-2021  19:52:03.csv  Aug-05-2021  19:52:03_TM.csv  Aug-05-2021  20:04:54.csv  Aug-05-2021  20:04:54_TM.csv  Aug-05-2021  20:37:47.csv  Aug-05-2021  20:37:47_TM.csv  Aug-05-2021  20:51:49.csv  Aug-05-2021  20:51:49_TM.csv  Aug-05-2021  20:56:58.csv  Aug-05-2021  20:56:58_TM.csv  Aug-05-2021  21:08:28.csv  Aug-05-2021  21:08:28_TM.csv  Aug-05-2021  21:23:47.csv  Aug-05-2021  21:25:17.csv  Aug-05-2021  21:25:17_TM.csv  Aug-05-2021  21:41:56.csv  Aug-05-2021  21:41:56_TM.csv  Aug-05-2021  21:53:14.csv  (+309 more)
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/launch/: commander_interface.launch  events_trigger_interface.launch
src/interfaces/msg/: trace_events.msg
src/interfaces/src/: commander_ihm.py  events_trigger.py  teste.py
src/interfaces/src/OP/: EVENTS.py  translation_table.csv
src/interfaces/src/events_log/: Apr-13-2021  20:44:13.csv  Apr-16-2021  20:21:17.csv  Aug-03-2021  21:30:34.csv  Aug-03-2021  22:15:20.csv  Aug-05-2021  19:52:06.csv  Aug-05-2021  20:04:58.csv  Aug-05-2021  20:37:53.csv  Aug-05-2021  20:51:56.csv  Aug-05-2021  20:57:00.csv  Aug-05-2021  21:08:30.csv  Aug-05-2021  21:25:18.csv  Aug-05-2021  21:42:00.csv  Aug-05-2021  21:53:15.csv  Aug-09-2021  18:53:44.csv  Aug-09-2021  19:12:25.csv  Aug-09-2021  19:29:02.csv  Aug-09-2021  19:45:18.csv  Aug-09-2021  19:53:57.csv  Aug-09-2021  20:12:55.csv  Aug-09-2021  20:21:49.csv  Aug-09-2021  20:32:31.csv  Aug-09-2021  20:44:18.csv  Aug-09-2021  21:16:04.csv  Aug-09-2021  21:21:30.csv  Aug-09-2021  21:29:14.csv  Aug-09-2021  21:49:13.csv  Aug-09-2021  22:17:16.csv  Aug-12-2021  19:48:27.csv  Aug-12-2021  19:59:44.csv  Aug-19-2021  19:11:27.csv  Aug-19-2021  19:29:19.csv  Aug-19-2021  19:47:20.csv  Aug-19-2021  19:54:31.csv  Aug-19-2021  20:08:08.csv  Aug-19-2021  20:22:47.csv  Aug-27-2021  23:14:12.csv  Aug-27-2021  23:33:51.csv  Aug-27-2021  23:50:34.csv  Aug-28-2021  00:16:09.csv  Aug-28-2021  00:31:26.csv  (+140 more)
src/interfaces/src/missions/: app.xml  approaches.xml  assessment1.xml  assessment2.xml  building1.xml  building2.xml  dasda.xml  exp_test.xml  external1.xml  external2.xml  first_view.xml  m.xml  m1.xml  m2.xml  m3.xml  m4.xml  p1_rb.xml  p2_rb.xml  t.xml  teste.xml  uav_app.xml
src/pioneer3at/frontier_exploration/octomap_exploration/: CMakeLists.txt  package.xml
src/pioneer3at/octomap_exploration/: CMakeLists.txt
src/pioneer3at/octomap_exploration/action/: ExecuteExploration.action
src/pioneer3at/octomap_exploration/include/: Explorer.h
src/pioneer3at/octomap_exploration/src/: Explorer.cpp
src/pioneer3at_ros/: package.xml
src/pioneer3at_ros/launch/: make_robot_description_and_call_state_publisher_pioneer3at.launch  pioneer3at.launch
src/pioneer3at_ros/sdf/: model.sdf
src/pioneer3at_ros/src/: go_to_pub.py  motion_controller.py
src/pioneer3at_ros/urdf/: pioneer3at_ros.urdf
src/quadrotor/hector_moveit/hector_moveit_exploration/: CMakeLists.txt  package.xml
src/quadrotor/quadrotor_control_system/: CMakeLists.txt  package.xml
src/quadrotor/quadrotor_control_system/action/: ExecuteAssesst.action  ExecuteLand.action  ExecuteSearch.action
src/quadrotor/quadrotor_control_system/launch/: assessment_server.launch  maneuvers.launch  safe_land_server.launch  search_server.launch
src/quadrotor/quadrotor_control_system/src/: assessment.py  exploration.py  maneuvers.py  safe_land.py  v_search.py
src/quadrotor/slam/: CMakeLists.txt  package.xml
src/quadrotor/slam/launch/: rtab_slam.launch
src/quadrotor/uav/: CMakeLists.txt  package.xml
src/quadrotor/uav/launch/: UAV.launch  octomap_mapping.launch
src/system_msgs/: CMakeLists.txt  package.xml
src/system_msgs/msg/: abstractions.msg  events_message.msg  m_status.msg  mission.msg  missions_feedback.msg  required_events.msg  task_message.msg
src/task_dispatcher/: CMakeLists.txt  package.xml
src/task_dispatcher/launch/: launch_dispatcher.launch
src/task_dispatcher/src/: DFS.py  Mission.py  mission.xml  mission_assigner.py  task_allocation_system.py  teste.py  tree.py  treeExample.py
src/task_dispatcher/src/missions_sequences/: Apr-13-2021  20:44:10.csv  Apr-16-2021  20:21:03.csv  Aug-03-2021  21:03:33.csv  Aug-03-2021  21:15:03.csv  Aug-03-2021  21:22:49.csv  Aug-03-2021  21:30:29.csv  Aug-03-2021  21:59:02.csv  Aug-03-2021  22:15:16.csv  Aug-05-2021  19:52:03.csv  Aug-05-2021  20:04:55.csv  Aug-05-2021  20:37:48.csv  Aug-05-2021  20:51:50.csv  Aug-05-2021  20:56:58.csv  Aug-05-2021  21:08:28.csv  Aug-05-2021  21:25:17.csv  Aug-05-2021  21:41:56.csv  Aug-05-2021  21:53:14.csv  Aug-09-2021  18:53:37.csv  Aug-09-2021  19:12:23.csv  Aug-09-2021  19:29:01.csv  Aug-09-2021  19:45:15.csv  Aug-09-2021  19:53:51.csv  Aug-09-2021  20:12:53.csv  Aug-09-2021  20:21:47.csv  Aug-09-2021  20:32:30.csv  Aug-09-2021  20:44:16.csv  Aug-09-2021  21:15:49.csv  Aug-09-2021  21:21:28.csv  (+172 more)
(+805 files in other folders)
