<?xml version="1.0"?>
<package format="2">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>The interfaces package</description>

  <maintainer email="marcelo_simon@hotmail.com">marcelo</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
