<?xml version="1.0"?>
<package format="2">
  <name>pioneer3at_ros</name>
  <version>2.5.8</version>
  <description>
    A model can be used as a pioneer2dx which can be controlled from ROS.
  </description>

  <maintainer email="shimizu@sist.chukyo-u.ac.jp">Masaru Shimizu</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/m-shimizu/Samples_Gazebo_ROS</url>
  <author>Masaru Shimizu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libgazebo7-dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <!--
    Need to use libgazebo7-dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <exec_depend>libgazebo7-dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>polled_camera</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <!-- When moved to format 2, this can be turned test_depend -->
  <build_depend>rostest</build_depend>
  <exec_depend>rostest</exec_depend>
<!--

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libgazebo7-dev</build_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libgazebo7-dev</exec_depend>
-->

  <!-- The export tag contains other, unspecified, tags -->
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/meshes"/>
  </export>

</package>
