<?xml version="1.0"?>
<package format="2">
  <name>octomap_exploration</name>
  <version>0.0.0</version>
  <description>The hector_moveit_exploration package</description>

  <author email="tahsincankose@gmail.com">Tahsincan Köse</author>
  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>

  <export>

  </export>
</package>
